# BacWork

./: CMakeLists.txt  Module.cpp  Module.h  README.md  file2.txt  file3.txt  file4.txt  main.cpp  test_affinity2.cpp  try_again.cpp
c++11to98/: .gitignore  Module.cpp  Module.h  Queue.cpp  Queue.cpp~  Queue.h  Queue.h~  Queue98.cpp  QueueAndSockets.cpp  QueueAndSockets.h  Socket.cpp~  Socket.h~  a.out  check_general.txt  file1.txt  main.cpp  main.cpp~  makefile  modules.txt  modules1.txt  modules_25_2.txt  modules_auto.txt  modules_auto.txt~  modules_general.txt  modules_general.txt~  modules_search.txt  modules_search.txt~  res1.txt  res_with_bar2.txt  ress.txt  resultsfrom25.11.txt  test_affinity.cpp  treadSS_test.cpp
c++11to98/17.11/: res2x1.txt  res2x10_2.txt  res2x2_2.txt  res2x3.txt  res2x44_2.txt  res2x4_2.txt  res2x5.txt  res2x55_2.txt  res_overload_by_modules_number.txt
c++11to98/2machines/: IOTAC_REG.txt  iotac_reg_cons.txt  iotac_reg_cons1.txt  reg_toi_switch.txt  reg_toi_switch_no_flag.txt  reg_toi_switch_no_flag2.txt
c++11to98/check_modules/: ИОТ_АС.txt  ИмАС.txt  Отобр.txt  План.txt  Рег.txt  ТОИ_АС.txt  ФВД_АС.txt
c++11to98/input_files/: modules_25_3.txt  modules_auto.txt
c++11to98/new_parser/: Parser.cpp  file1.txt
c++11to98/old_files/: Queue.cpp  Queue98.cpp  QueueAndSockets.cpp  Socket98.cpp
c++11to98/queue/: messages_queue0.txt  messages_queue1.txt  messages_queue2.txt
c++11to98/results/: res_for_1000.txt  ress not enough good.txt  ress.txt  resss.txt  rx10.txt  (+2 more)
tests and results/: .gitignore  main_1.cpp  modules.txt  modules_general.txt
(+36 files in other folders)
